Correctly show playlist length for playlists > 1d

The limit is now 1 month, which should be enough for day to day usage. ;-)
BUG:267380
FIXED-IN:2.4.2